--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
-    "@types/express-handlebars": "^6.0.0"
+    "@types/express-handlebars": "^6.0.0",
+    "nodemon": "^3.0.1"
   }
 }
